# python-productivity-powerups

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/workflows/: constraints.txt  main.yaml
docs/: getting_started.md  project_specific_setup.md  using_poetry.md
notebooks/: 2020-05-05 - Python Productivity Power-Ups (PyData UK).ipynb  2022-09-24 - Python Productivity Power-Ups (PyCon PT).ipynb  2022-09-24 - Talk Timer.ipynb  2023-02-23 - Python Productivity Power-Ups (PyCon NA).ipynb  2023-03-07 - Python Productivity Power-Ups (GeoPython 2023).ipynb  2023-03-07 - Talk Timer.ipynb  Python Productivity Power-Ups.ipynb  autoflake.py  bandit.py  black.py  flake8.py  isort_example.py  logaru_example.py  pylint.py  pyupgrade.py
notebooks/.ipynb_checkpoints/: Python Productivity Power-Ups-checkpoint.ipynb  The Coronavirus Curve-checkpoint.ipynb  The_Coronavirus_Curve-interactive-checkpoint.ipynb
notebooks/cache/joblib/__main__--Users-john-code-miscellaneous-python-productivity-powerups-notebooks-__ipython-input__/calculate/: func_code.py
notebooks/cache/joblib/__main__--Users-john-code-miscellaneous-python-productivity-powerups-notebooks-__ipython-input__/calculate/d9ea335b613be810ea03bfde9e3e947b/: metadata.json  output.pkl
notebooks/cache/joblib/__main__--Users-john-code-miscellaneous-python-productivity-powerups-notebooks-__ipython-input__/calculate/fee6d9f8f4f327bd4164cd5b3c3ad60d/: metadata.json  output.pkl
tests/: test_pylint.py  test_python_productivity_power_ups.py
