###########
# 📜 Poetry
###########
[tool.poetry]
name = "python_productivity_powerups"
version = "0.1.0"
description = "Packages To Power-Up Your Python Productivity"
authors = ["John Sandall <2884159+john-sandall@users.noreply.github.com>"]
license = "UNLICENSED"
classifiers = ["Private :: Do Not Upload"]
packages = [{ include = "notebooks", from = "notebooks" }]

[tool.poetry.dependencies]
python = "^3.10.6"
# Everything below here is alphabetically sorted
black = "^22.12.0"
ipykernel = "^6.21.2"
isort = "^5.12.0"
joblib = "^1.2.0"
jupyter-black = "^0.3.3"
jupyterlab = "^3.6.1"
loguru = "^0.6.0"
pandarallel = "^1.6.4"
pandas = "^1.5.3"
seaborn = "^0.12.2"
tqdm = "^4.64.1"
treon = "^0.1.4"
bandit = "^1.7.4"

[tool.poetry.dev-dependencies]
# Everything below here is alphabetically sorted
autoflake = "<2.0.1"
detect-secrets = "1.2.0"
flake8 = ">=5,<6"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.4.0"
flake8-fixme = "^1.1.1"
flake8-implicit-str-concat = "^0.3.0"
flake8-no-pep420 = "^2.3.0"
flake8-print = "^5.0.0"
flake8-return = "^1.2.0"
ipdb = "^0.13.11"
pip-audit = "^2.4.14"
pre-commit = "^2.21.0"
pylint = "^2.16.2"
pytest = "^7.2.1"
pyupgrade = "^3.3.1"
towncrier = "^21.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

############
# ✅ Linters
############
[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
default_section = "THIRDPARTY"
known_first_party = ["notebooks"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
# add_imports = "from __future__ import annotations"

[tool.pylint.MASTER]
ignore-paths = [".git", "notebooks/isort_example.py"]
load-plugins = []

[tool.pylint."MESSAGES CONTROL"]
enable = "all"
max-module-lines = 2000
max-line-length = 100
max-locals = 50
min-similarity-lines = 150
max-statements = 89
max-args = 22
max-branches = 17
# good-names = []
disable = ["missing-module-docstring"]
logging-format-style = "new"

##############
# 📣 Towncrier
##############
[tool.towncrier]
package = "notebooks"
package_dir = "."
filename = "CHANGELOG.md"
directory = ".changelog/"
template = ".changelog/template.md"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/john-sandall/python-productivity-powerups/issues/{issue})"
start_string = "<!-- TOWNCRIER -->\n"
underlines = ["", ""]

# .added for new features
# .changed for changes in existing functionality
# .deprecated for soon-to-be removed features
# .removed for now removed features
# .fixed for any bug fixes
# .security in case of vulnerabilities
# .analysis for data analyses
# .docs for documentation improvements
# .maintenance for maintenance tasks & upgrades
[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "analysis"
name = "Analyses"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance Changes"
showcontent = true
